--- a/TestApp/App/Flows/Main/Post/Cells/PostCell.xib
+++ b/TestApp/App/Flows/Main/Post/Cells/PostCell.xib
@@ -11,35 +11,102 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="77" id="KGk-i7-Jjw" customClass="PostCell" customModule="TestApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="300" id="KGk-i7-Jjw" customClass="PostCell" customModule="TestApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dUc-Tm-BIE">
+                        <rect key="frame" x="20" y="10" width="280" height="18"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tzi-AG-lR4">
-                        <rect key="frame" x="20" y="60" width="280" height="1"/>
+                        <rect key="frame" x="20" y="299" width="280" height="1"/>
                         <color key="backgroundColor" systemColor="systemGray5Color"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="LwP-lS-IWH"/>
                         </constraints>
                     </view>
+                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nry-al-iDb">
+                        <rect key="frame" x="20" y="38" width="280" height="186.5"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="nry-al-iDb" secondAttribute="height" multiplier="3:2" id="Jdp-g1-bG7"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tLu-Gl-UB3">
+                        <rect key="frame" x="20" y="229.5" width="280" height="17"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfe-x7-s9R">
+                        <rect key="frame" x="20" y="251.5" width="280" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGZ-i9-RNV">
+                        <rect key="frame" x="20" y="273.5" width="280" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y9R-0A-6Pw">
+                        <rect key="frame" x="20" y="38" width="280" height="186.5"/>
+                        <state key="normal" image="playButton"/>
+                        <connections>
+                            <action selector="playButtonTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Xc9-ud-aVh"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="Tzi-AG-lR4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="3So-RZ-XfZ"/>
+                    <constraint firstItem="nry-al-iDb" firstAttribute="top" secondItem="dUc-Tm-BIE" secondAttribute="bottom" constant="10" id="3W8-up-yp7"/>
+                    <constraint firstItem="DGZ-i9-RNV" firstAttribute="top" secondItem="dfe-x7-s9R" secondAttribute="bottom" constant="5" id="6pB-1j-3Pj"/>
+                    <constraint firstAttribute="trailing" secondItem="DGZ-i9-RNV" secondAttribute="trailing" constant="20" id="AgK-Aw-EUH"/>
+                    <constraint firstItem="dUc-Tm-BIE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="BQT-2u-guh"/>
+                    <constraint firstItem="y9R-0A-6Pw" firstAttribute="trailing" secondItem="nry-al-iDb" secondAttribute="trailing" id="ISq-0U-6db"/>
+                    <constraint firstItem="Tzi-AG-lR4" firstAttribute="top" secondItem="DGZ-i9-RNV" secondAttribute="bottom" constant="5" id="IkY-yf-Spy"/>
+                    <constraint firstItem="DGZ-i9-RNV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="LIQ-aT-hSL"/>
+                    <constraint firstItem="tLu-Gl-UB3" firstAttribute="top" secondItem="nry-al-iDb" secondAttribute="bottom" constant="5" id="Lc3-ya-Ubf"/>
+                    <constraint firstItem="dfe-x7-s9R" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="M00-kk-gHT"/>
+                    <constraint firstAttribute="trailing" secondItem="tLu-Gl-UB3" secondAttribute="trailing" constant="20" id="Ttb-UQ-4ZX"/>
+                    <constraint firstItem="nry-al-iDb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="UQh-u6-ysN"/>
+                    <constraint firstItem="dfe-x7-s9R" firstAttribute="top" secondItem="tLu-Gl-UB3" secondAttribute="bottom" constant="5" id="VRz-iz-YQg"/>
+                    <constraint firstItem="y9R-0A-6Pw" firstAttribute="bottom" secondItem="nry-al-iDb" secondAttribute="bottom" id="aQ5-H5-0fQ"/>
+                    <constraint firstAttribute="trailing" secondItem="dUc-Tm-BIE" secondAttribute="trailing" constant="20" id="d2a-wG-mjU"/>
                     <constraint firstAttribute="trailing" secondItem="Tzi-AG-lR4" secondAttribute="trailing" constant="20" id="e4k-tB-Swo"/>
+                    <constraint firstItem="DGZ-i9-RNV" firstAttribute="top" secondItem="dfe-x7-s9R" secondAttribute="bottom" constant="5" id="fW0-vU-o0O"/>
+                    <constraint firstItem="y9R-0A-6Pw" firstAttribute="leading" secondItem="nry-al-iDb" secondAttribute="leading" id="gMU-nt-gAb"/>
                     <constraint firstAttribute="bottom" secondItem="Tzi-AG-lR4" secondAttribute="bottom" id="hNu-dQ-zHb"/>
-                    <constraint firstItem="Tzi-AG-lR4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="60" id="zuC-Xe-rS6"/>
+                    <constraint firstAttribute="trailing" secondItem="dfe-x7-s9R" secondAttribute="trailing" constant="20" id="i0P-Eu-7L2"/>
+                    <constraint firstAttribute="trailing" secondItem="nry-al-iDb" secondAttribute="trailing" constant="20" id="iHH-39-L3i"/>
+                    <constraint firstItem="tLu-Gl-UB3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="ibK-TI-1yg"/>
+                    <constraint firstItem="y9R-0A-6Pw" firstAttribute="top" secondItem="nry-al-iDb" secondAttribute="top" id="ipm-7g-AYs"/>
+                    <constraint firstItem="dUc-Tm-BIE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ku4-QZ-5kj"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <point key="canvasLocation" x="137.68115942028987" y="135.26785714285714"/>
+            <connections>
+                <outlet property="autor" destination="tLu-Gl-UB3" id="4hJ-vM-v3v"/>
+                <outlet property="comments" destination="dfe-x7-s9R" id="wbK-JR-RIl"/>
+                <outlet property="date" destination="DGZ-i9-RNV" id="Vxr-Gh-OMT"/>
+                <outlet property="playButton" destination="y9R-0A-6Pw" id="uIe-GS-EE5"/>
+                <outlet property="thumbnail" destination="nry-al-iDb" id="BqA-Cu-EvW"/>
+                <outlet property="title" destination="dUc-Tm-BIE" id="V4j-R9-RwP"/>
+            </connections>
+            <point key="canvasLocation" x="47.826086956521742" y="100.44642857142857"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="playButton" width="50" height="50"/>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
