--- a/TestApp/App/Flows/Main/Post/Post.storyboard
+++ b/TestApp/App/Flows/Main/Post/Post.storyboard
@@ -60,6 +60,55 @@
             </objects>
             <point key="canvasLocation" x="25" y="61"/>
         </scene>
+        <!--Post Detailed View Controller-->
+        <scene sceneID="v8I-4m-xdb">
+            <objects>
+                <viewController storyboardIdentifier="PostDetailedViewController" id="ofF-PD-skL" customClass="PostDetailedViewController" customModule="TestApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1eD-bm-hTS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7mj-7r-Mx1">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="KVD-N3-V0K">
+                                        <rect key="frame" x="20" y="20" width="374" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JGm-K7-bx2">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="KVD-N3-V0K" secondAttribute="bottom" constant="20" id="4Rf-C5-Fqd"/>
+                                    <constraint firstItem="KVD-N3-V0K" firstAttribute="centerX" secondItem="7mj-7r-Mx1" secondAttribute="centerX" id="G6P-yv-oHj"/>
+                                    <constraint firstAttribute="trailing" secondItem="KVD-N3-V0K" secondAttribute="trailing" constant="20" id="RI4-FI-oFB"/>
+                                    <constraint firstItem="KVD-N3-V0K" firstAttribute="top" secondItem="7mj-7r-Mx1" secondAttribute="top" constant="20" id="XEd-ME-62m"/>
+                                    <constraint firstItem="KVD-N3-V0K" firstAttribute="leading" secondItem="7mj-7r-Mx1" secondAttribute="leading" constant="20" id="Y8q-3J-B5i"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bfm-1v-611"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bfm-1v-611" firstAttribute="trailing" secondItem="7mj-7r-Mx1" secondAttribute="trailing" id="DuM-zF-eb0"/>
+                            <constraint firstItem="7mj-7r-Mx1" firstAttribute="top" secondItem="bfm-1v-611" secondAttribute="top" id="KYh-Ma-v6c"/>
+                            <constraint firstItem="bfm-1v-611" firstAttribute="bottom" secondItem="7mj-7r-Mx1" secondAttribute="bottom" id="NHb-Lu-jo7"/>
+                            <constraint firstItem="7mj-7r-Mx1" firstAttribute="leading" secondItem="bfm-1v-611" secondAttribute="leading" id="sle-ow-9pY"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="postTitle" destination="JGm-K7-bx2" id="88M-Am-EkZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ThH-20-qL8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="726" y="61"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
